human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_1.wast
(assert_invalid
  (module (func $local-index (unreachable) (drop (local.get 0))))
  "unknown local"
)